feat: XML layout improved

--- a/samples/xml_app/src/main/res/layout/credentials_layout.xml
+++ b/samples/xml_app/src/main/res/layout/credentials_layout.xml
@@ -5,64 +5,46 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/addProfileTitle"
-        android:layout_width="wrap_content"
+    <com.google.android.material.button.MaterialButtonToggleGroup
+        android:id="@+id/sessionSwitch"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add new profile"
-        style="@style/HeaderText"
+        android:layout_gravity="center"
+        app:singleSelection="true"
+        app:checkedButton="@id/credentialLogin"
+        app:selectionRequired="true"
         android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-        
-    <TextView
-        android:id="@+id/productionText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="production"
-        style="@style/SubText"
-        android:layout_marginTop="40dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addProfileTitle"/>
-        
-    <LinearLayout
-        android:id="@+id/sessionSwitchLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/productionText">
+        app:layout_constraintTop_toTopOf="parent">
 
-        <RadioGroup
-            android:layout_width="wrap_content"
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/credentialLogin"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            
-            <RadioButton
-                android:id="@+id/sessionSwitch"
-                android:layout_width="wrap_content"
-                android:layout_height="32dp"
-                android:background="@drawable/toggle_button_selector"
-                android:button="@null"
-                android:checked="false"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
-                android:text="@string/token_login"
-                android:textColor="@drawable/toggle_text_color"
-                android:gravity="center"/>
-                
-        </RadioGroup>
+            android:layout_weight="1"
+            android:text="@string/credentials_login"
+            style="@style/ToggleButton"
+            app:backgroundTint="@color/main_green"
+            android:textColor="@color/white"/>
 
-    </LinearLayout>
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/tokenLogin"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/token_login"
+            style="@style/ToggleButton"
+            app:backgroundTint="@color/white"
+            android:textColor="@color/black"/>
+
+    </com.google.android.material.button.MaterialButtonToggleGroup>
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/loginInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/sessionSwitchLayout">
+        app:layout_constraintTop_toBottomOf="@+id/sessionSwitch">
 
         <androidx.constraintlayout.widget.Group
             android:id="@+id/credentialGroup"
@@ -71,100 +53,113 @@
             app:constraint_referenced_ids="usernameTextFieldLayout,passwordTextFieldLayout"
             android:visibility="visible" />
 
-        <TextView
-            android:id="@+id/usernameLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/username"
-            style="@style/FieldLabelStyle"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-            
-        <com.google.android.material.textfield.TextInputLayout
+        <LinearLayout
             android:id="@+id/usernameTextFieldLayout"
-            android:layout_width="356dp"
-            android:layout_height="32dp"
-            style="@style/CustomTextInputLayout"
-            app:boxStrokeWidth="1dp"
-            app:boxStrokeColor="@color/colorPrimaryVariant"
-            app:layout_constraintTop_toBottomOf="@+id/usernameLabel"
-            app:layout_constraintStart_toStartOf="parent">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/usernameTextField"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="text"
-                android:paddingTop="0dp"
-                android:paddingBottom="0dp" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <TextView
-            android:id="@+id/passwordLabel"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/password"
-            style="@style/FieldLabelStyle"
+            android:orientation="vertical"
             android:layout_marginTop="@dimen/spacing_normal"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/usernameTextFieldLayout" />
+            app:layout_constraintTop_toTopOf="parent">
 
-        <com.google.android.material.textfield.TextInputLayout
+            <TextView
+                android:id="@+id/usernameLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/username"
+                style="@style/FieldLabelStyle" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                style="@style/CustomTextInputLayout"
+                app:boxStrokeWidth="1dp"
+                app:boxStrokeColor="@color/colorPrimaryVariant">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/usernameTextField"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:inputType="text"
+                    android:paddingTop="0dp"
+                    android:paddingBottom="0dp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/passwordTextFieldLayout"
-            android:layout_width="356dp"
-            android:layout_height="32dp"
-            app:passwordToggleEnabled="true"
-            style="@style/CustomTextInputLayout"
-            app:boxStrokeWidth="1dp"
-            app:boxStrokeColor="@color/colorPrimaryVariant"
-            app:layout_constraintTop_toBottomOf="@+id/passwordLabel"
-            app:layout_constraintStart_toStartOf="parent">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/passwordTextField"
-                android:inputType="textPassword"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingTop="0dp"
-                android:paddingBottom="0dp" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <TextView
-            android:id="@+id/tokenLabel"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/token"
-            style="@style/FieldLabelStyle"
-            android:visibility="gone"
+            android:orientation="vertical"
+            android:layout_marginTop="@dimen/spacing_normal"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/usernameTextFieldLayout">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tokenTextFieldLayout"
-            android:layout_width="356dp"
-            android:layout_height="32dp"
-            android:visibility="gone"
-            style="@style/CustomTextInputLayout"
-            app:boxStrokeWidth="1dp"
-            app:boxStrokeColor="@color/colorPrimaryVariant"
-            app:layout_constraintTop_toBottomOf="@+id/tokenLabel"
-            app:layout_constraintStart_toStartOf="parent">
+            <TextView
+                android:id="@+id/passwordLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/password"
+                style="@style/FieldLabelStyle" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/tokenTextField"
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingTop="0dp"
-                android:paddingBottom="0dp" />
+                android:layout_height="32dp"
+                app:passwordToggleEnabled="true"
+                style="@style/CustomTextInputLayout"
+                app:boxStrokeWidth="1dp"
+                app:boxStrokeColor="@color/colorPrimaryVariant">
 
-        </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/passwordTextField"
+                    android:inputType="textPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingTop="0dp"
+                    android:paddingBottom="0dp" />
 
+            </com.google.android.material.textfield.TextInputLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/tokenTextFieldLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="@dimen/spacing_normal"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/tokenLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/token"
+                style="@style/FieldLabelStyle" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                style="@style/CustomTextInputLayout"
+                app:boxStrokeWidth="1dp"
+                app:boxStrokeColor="@color/colorPrimaryVariant">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/tokenTextField"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingTop="0dp"
+                    android:paddingBottom="0dp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 
     <TextView
         android:id="@+id/callerIdNameLabel"
@@ -178,7 +173,7 @@
         
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/callerIdNameTextFieldLayout"
-        android:layout_width="356dp"
+        android:layout_width="match_parent"
         android:layout_height="32dp"
         style="@style/CustomTextInputLayout"
         app:boxStrokeWidth="1dp"
@@ -207,7 +202,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/callerIdNumberTextFieldLayout"
-        android:layout_width="356dp"
+        android:layout_width="match_parent"
         android:layout_height="32dp"
         style="@style/CustomTextInputLayout"
         app:boxStrokeWidth="1dp"
@@ -234,7 +229,6 @@
         android:textAllCaps="false"
         android:textStyle="bold"
         style="@style/CustomPrimaryButton"
-        app:cornerRadius="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/callerIdNumberTextFieldLayout"
         />
