--- a/samples/xml_app/src/main/res/values/colors.xml
+++ b/samples/xml_app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="portal_blue">#3434EF</color>
     <color name="colorTransparent">#00FFFFFF</color>
     <color name="answer_green">#14F0B8</color>
+    <color name="main_green">#008563</color>
 </resources>
