--- a/samples/xml_app/src/main/res/values/styles.xml
+++ b/samples/xml_app/src/main/res/values/styles.xml
@@ -126,4 +126,10 @@
         <item name="cornerSize">10dp</item>
     </style>
 
+    <style name="ToggleButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="cornerRadius">4dp</item>
+        <item name="strokeColor">@color/colorPrimaryVariant</item>
+        <item name="strokeWidth">1dp</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
 </resources>
