chore: code refactor

--- a/samples/xml_app/src/main/res/layout/credentials_layout.xml
+++ b/samples/xml_app/src/main/res/layout/credentials_layout.xml
@@ -71,7 +71,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="32dp"
+                android:layout_height="@dimen/form_field_normal"
                 style="@style/CustomTextInputLayout"
                 app:boxStrokeWidth="1dp"
                 app:boxStrokeColor="@color/colorPrimaryVariant">
@@ -106,7 +106,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="32dp"
+                android:layout_height="@dimen/form_field_normal"
                 app:passwordToggleEnabled="true"
                 style="@style/CustomTextInputLayout"
                 app:boxStrokeWidth="1dp"
@@ -143,7 +143,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="32dp"
+                android:layout_height="@dimen/form_field_normal"
                 style="@style/CustomTextInputLayout"
                 app:boxStrokeWidth="1dp"
                 app:boxStrokeColor="@color/colorPrimaryVariant">
@@ -174,7 +174,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/callerIdNameTextFieldLayout"
         android:layout_width="match_parent"
-        android:layout_height="32dp"
+        android:layout_height="@dimen/form_field_normal"
         style="@style/CustomTextInputLayout"
         app:boxStrokeWidth="1dp"
         app:boxStrokeColor="@color/colorPrimaryVariant"
@@ -203,7 +203,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/callerIdNumberTextFieldLayout"
         android:layout_width="match_parent"
-        android:layout_height="32dp"
+        android:layout_height="@dimen/form_field_normal"
         style="@style/CustomTextInputLayout"
         app:boxStrokeWidth="1dp"
         app:boxStrokeColor="@color/colorPrimaryVariant"
