feat: improved paddings and call switch visibility

--- a/samples/xml_app/src/main/res/layout/credentials_layout.xml
+++ b/samples/xml_app/src/main/res/layout/credentials_layout.xml
@@ -229,7 +229,7 @@
             android:id="@+id/confirmButton"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/button_height"
-            android:text="@string/sign_in"
+            android:text="@string/confirm"
             android:layout_marginTop="@dimen/spacing_medium"
             android:textSize="12sp"
             android:textAllCaps="false"
