--- a/samples/xml_app/src/main/res/layout/activity_main.xml
+++ b/samples/xml_app/src/main/res/layout/activity_main.xml
@@ -9,13 +9,6 @@
     tools:context="org.telnyx.webrtc.xml_app.MainActivity">
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/topGuideLine"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.25"/>
-
-    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/bottomGuideLine"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,9 +17,10 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:padding="6dp"
+        android:layout_marginTop="@dimen/spacing_medium"
         android:contentDescription="@string/dash"
         android:src="@drawable/telnyx_logo"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,8 +31,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:fillViewport="true"
+        android:layout_marginTop="@dimen/spacing_small"
         app:layout_constraintBottom_toTopOf="@id/bottomGuideLine"
-        app:layout_constraintTop_toBottomOf="@id/topGuideLine">
+        app:layout_constraintTop_toBottomOf="@id/imageView">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -76,7 +71,7 @@
                     android:id="@+id/socketStatus"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing_tiny"
+                    android:layout_marginTop="@dimen/spacing_mega_tiny"
                     android:gravity="center"
                     android:orientation="horizontal"
                     app:layout_constraintStart_toStartOf="parent"
@@ -114,7 +109,7 @@
                     android:id="@+id/callState"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing_tiny"
+                    android:layout_marginTop="@dimen/spacing_mega_tiny"
                     android:gravity="center"
                     android:orientation="horizontal"
                     app:layout_constraintStart_toStartOf="parent"
@@ -158,7 +153,7 @@
                         style="@style/SubText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/spacing_tiny"
+                        android:layout_marginTop="@dimen/spacing_mega_tiny"
                         android:text="@string/dash"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/loginInfo" />
@@ -220,6 +215,7 @@
         android:layout_height="wrap_content"
         android:text="@string/bottom_bar_production_text"
         style="@style/SubText"
+        android:textColor="@color/colorPrimaryVariant"
         android:layout_marginBottom="16dp"
         app:layout_constraintTop_toBottomOf="@id/bottomButton"
         app:layout_constraintBottom_toBottomOf="parent"
