--- a/samples/xml_app/src/main/res/layout/fragment_home_call.xml
+++ b/samples/xml_app/src/main/res/layout/fragment_home_call.xml
@@ -67,7 +67,7 @@
                     android:id="@+id/callInput"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="phone"
+                    android:inputType="text"
                     />
 
             </com.google.android.material.textfield.TextInputLayout>
